tdf#138047 wait until map to disable the parent SalFrame tab-cycling

because the original parent is changed before the popup appears
and the wrong SalFrame is affected

Change-Id: I4dbf50c6bac063b7730f5b6c0f388b4983e0866c
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/105735
Tested-by: Caolán McNamara <caolanm@redhat.com>
Reviewed-by: Caolán McNamara <caolanm@redhat.com>